--- a/100.html
+++ b/100.html
@@ -33,7 +33,7 @@
 
 
 
-    <div> Hola</div> #Soy Jorge
+     #Soy Jorge
 
     <!-- Librería de jQuery -->
     <script src="assets/libs/jquery-3.min.js" charset="utf-8"></script>
